# LAN_fileshare

./: CMakeLists.txt  Main.qml  main.cpp  recoures.qrc
Backend/: Backend.h  TCP_Sharing.cpp  UDP_searchAround.cpp  backend.cpp  backend.h
ui/: Main.qml  Receive_UI.qml  Send_UI.qml  connectionRequest.qml
ui/Icons/qml/: ComputerIcon.qml
